--- a/Spy See/Spy See/Info.plist
+++ b/Spy See/Spy See/Info.plist
@@ -2,18 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>當你對著麥克風說話時，我們將進行語音識別。</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>當你按下「Speak」，我們將使用麥克風進行錄音。</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>SpotTheSpyTrevor</string>
+				<string>SpotTheSpyOnline</string>
 			</array>
 		</dict>
 	</array>
