--- a/Spy See/Spot The Spy.xcodeproj/xcshareddata/xcschemes/Spy See.xcscheme
+++ b/Spy See/Spot The Spy.xcodeproj/xcshareddata/xcschemes/Spy See.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B588918D2A6CFAC40028D385"
+               BuildableName = "SpotTheSpyTests.xctest"
+               BlueprintName = "SpotTheSpyTests"
+               ReferencedContainer = "container:Spot The Spy.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
